Fix task 12 cards to display seller username

--- a/Task 12/templates/browse.html
+++ b/Task 12/templates/browse.html
@@ -18,7 +18,7 @@
             </svg>
             <div class="card-body">
             <h5 class="card-title">{{item[1]}} &#8729; ${{item[4]}}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{item[5]}}/5 - Seller_id: {{item[3]}}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{item[5]}}/5.0 - Seller: {{item[3]}}</h6>
             <p class="card-text">{{item[2]}}</p>
             <a class="btn btn-primary" id="{{item[0]}}" onclick="addToCart(this.id)">Add to cart</a>
             </div>
