--- a/Projects/17. Remade Talluri Technologies Website/templates/footer.html
+++ b/Projects/17. Remade Talluri Technologies Website/templates/footer.html
@@ -1,6 +1,6 @@
 <!--TODO: Get the current year for copyright-->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-0 border-top">
-    <p class="col-md-4 mb-0 text-muted mx-4">© 2022 Talluri Technologies. All Rights Reserved. </p>
+    <p class="col-md-4 mb-0 text-muted mx-4">© <span id="year"></span> Talluri Technologies. All Rights Reserved. </p>
 
     <ul class="nav col-md-6 justify-content-end mx-4">
       <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-muted">Contact Us</a></li>
@@ -50,3 +50,7 @@
     </div>
 </div>
 </div>
+
+<script>
+  document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
